Fixed glitch on ios and font weighting for paragraphs

--- a/pages/_fonts.scss
+++ b/pages/_fonts.scss
@@ -15,6 +15,7 @@ a {
 
 p {
     font-family: "Open Sans", sans-serif;
+    font-weight: 600;
 }
 
 @include sm {
