--- a/pages/button/button.scss
+++ b/pages/button/button.scss
@@ -2,6 +2,7 @@
 @import '../fonts';
 
 .button {
+    text-decoration: none;
     padding: 10px;
     border-radius: 5px;
     background-color: cornflowerblue;
