--- a/pages/index.scss
+++ b/pages/index.scss
@@ -8,6 +8,12 @@
     height: 100%;
 }
 
+.resImage {
+    max-width: 100%;
+    width: 400px;
+    height: auto;
+}
+
 .hero1 {
     @include angle(after, false, 3deg);
     background-color: $darkblue;
@@ -53,7 +59,6 @@
     align-content: center;
     align-items: center;
     .panel {
-        max-width: 500px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -68,8 +73,26 @@
             padding: 10px;
         }
 
+       
         .row {
-            margin-top: 20px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+           
+            @include md {
+                flex-direction: row;
+                align-items: flex-start;
+                max-width: 700px;
+            }
+
+            @include below($screen-md-min) {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            * {
+                padding: 15px ;
+            }
         }
     }
 }
